image positioning fix - on mobile

--- a/styles.css
+++ b/styles.css
@@ -298,6 +298,7 @@ footer {
     
     .section__image--right {
         top: 5px;
+        right: 0;
     }
 
     h2 {
